--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,7 +5,18 @@
 
 version: 2
 updates:
-  - package-ecosystem: "helm, dotnet-sdk, docker, composer" # See documentation for possible values
+  - package-ecosystem: "helm" # See documentation for possible values
+    package-ecosystem: "dotnet-sdk"
+    package-ecosystem: "docker"
+    package-ecosystem: "composer"
+    package-ecosystem: "bun"
+    package-ecosystem: "bundler"
+    package-ecosystem: "cargo"
+    package-ecosystem: "devcontainers"
+    package-ecosystem: "docker-compose"
+    package-ecosystem: "mix"
+    package-ecosystem: "elm"
+    package-ecosystem: "gitsubmodule"
     directory: "/" # Location of package manifests
     schedule:
       interval: "daily"
