--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,5 +19,4 @@ updates:
     package-ecosystem: "gitsubmodule"
     directory: "/" # Location of package manifests
     schedule:
-      interval: "daily"
-0
+      interval: "weekly"
